# derive-vec

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
derive-vec-proc-macro/: Cargo.toml
derive-vec-proc-macro/src/: lib.rs
derive-vec-trait/: Cargo.toml
derive-vec-trait/src/: lib.rs
src/: lib.rs
tests/: test_derive_vec_generic.rs  test_derive_vec_non_generic.rs
