[package]
name = "derive-vec-proc-macro"
version = "0.1.0"
edition = "2018"
authors = ["Miles Granger <miles59923@gmail.com>"]
description = "Derive Vec<T> like behavior"
repository = "https://github.com/milesgranger/derive-vec"
readme = "README.md"
license-file = "LICENSE"

[lib]
proc-macro = true

[dependencies]
quote = "^1.0"
syn = { version = "^1.0", features = ["full", "extra-traits"] }
proc-macro2 = "^1.0"

